tests/snapshots/parser_snapshots__parser_all@ast-23.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/test_list.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Import(
                    ImportDecl {
                        module: "of:core",
                        symbols: Named(
                            [
                                ImportSymbol {
                                    name: "print",
                                    alias: None,
                                },
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "main",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Int32,
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    VarDecl(
                                        "l",
                                        None,
                                        Some(
                                            LiteralList(
                                                [
                                                    Literal(
                                                        Int(
                                                            "5",
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Member(
                                                Variable(
                                                    "l",
                                                ),
                                                "push",
                                            ),
                                            [],
                                            [
                                                Literal(
                                                    Int(
                                                        "10",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    Return(
                                        Some(
                                            As(
                                                Call(
                                                    Member(
                                                        Variable(
                                                            "l",
                                                        ),
                                                        "get",
                                                    ),
                                                    [],
                                                    [
                                                        Literal(
                                                            Int(
                                                                "1",
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                                Primitive(
                                                    Int32,
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 3,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 3,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
