tests/snapshots/parser_snapshots__parser_all@ast-24.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/comment_at_end_of_input_results_in_eof.of
---
Err(
    "unexpected token comment",
)
