tests/snapshots/parser_snapshots__parser_all@ast-25.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/comment_then_identifier_on_later_line_has_correct_line.of
---
Err(
    "unexpected token identifier 'bar'",
)
