tests/snapshots/parser_snapshots__parser_all@ast-27.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/empty_input_returns_eof.of
---
Ok(
    Program {
        items: [],
    },
)
