tests/snapshots/parser_snapshots__parser_all@ast-29.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/equality_and_negation_tokens_are_recognized.of
---
Err(
    "unexpected token '='",
)
